# Clinic_Reservation

./: README.md  clinic_reservation.db  pyproject.toml  requirements.txt
api/: database.py  main.py  models.py  schemas.py
api/routers/: auth.py  reservations.py  slots.py
streamlit/: admin_app.py  clinic_app.py  patient_app.py
